# PoleZero

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: BoundaryCondition.h  MagnitudeResponseComponent.cpp  MagnitudeResponseComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PoleZeroFilter.h  TrajectoryProbe.h  ZPlaneComponent.cpp  ZPlaneComponent.h
